# dg-lab-3

part-1/consumer/: main.py  pyproject.toml
part-1/producer/: main.py
part-2/common/helpers/: pyproject.toml
part-2/consumer/: main.py  pyproject.toml
part-2/producer/: main.py  pyproject.toml
part-2/rabbitmq/: broker_connection.py  concumers.py  initializer.py  main.py  publisher.py  pyproject.toml  vault_helper.py
part-3/: deploy.sh
part-3/app/: Chart.yaml  values.yaml
part-3/app/charts/back/: values.yaml
part-3/app/charts/back/templates/: _helpers.tpl  deployment.yaml  service.yaml
part-3/app/charts/celery-worker/: values.yaml
part-3/app/charts/celery-worker/templates/: deployment.yaml
part-3/app/charts/flower/: values.yaml
part-3/app/charts/flower/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
part-3/app/charts/postgres/: values.yaml
part-3/app/charts/postgres/templates/: _helpers.tpl  config.yaml  secret.yaml
part-3/app/charts/rabbitmq/: values.yaml
part-3/app/charts/rabbitmq/templates/: _helpers.tpl  config.yaml  secret.yaml
part-3/app/templates/: ingress.yaml
part-3/celery_lab/: Dockerfile  pyproject.toml
part-3/celery_lab/app/: crud.py  main.py  models.py
part-3/celery_lab/app/api/: main.py
part-3/celery_lab/app/celery/: celery_app.py  celeryconfig.py  tasks.py
part-3/celery_lab/app/core/: config.py  db.py
part-3/celery_lab/app/utils/: __init__.py  connection_builder.py  vault_helper.py
producer/: pyproject.toml
rabbitmq-helm/: .env  deploy.sh  values.yaml
(+1 files in other folders)
